tests/core/snapshots/graphql-conformance-http-002.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(hostname: "0.0.0.0", port: 8001, queryValidation: false) @upstream(httpCache: 42) {
  query: Query
}

type BirthDay {
  day: Int!
  month: Int!
  year: Int
}

type Query {
  user(id: ID!): User! @http(url: "http://upstream/user", query: [{key: "id", value: "{{.args.id}}"}])
}

type User {
  birthday: BirthDay!
  city: String
  friends: [User!]!
  id: ID!
  name: String!
}
