tests/core/snapshots/graphql-conformance-http-010.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Location {
  lat: Int!
  lon: Int!
}

input LocationInput {
  lat: Int!
  lon: Int!
}

type Point {
  id: ID!
  location: Location
  name: String!
}

type Query {
  nearby(location: LocationInput): Point
}

schema {
  query: Query
}
