tests/core/snapshots/graphql-conformance-http-014.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/", httpCache: 42) {
  query: Query
}

type Query {
  user(id: ID!): User! @http(path: "/user", query: [{key: "id", value: "{{.args.id}}"}])
}

type User {
  city: String
  id: ID!
  name: String!
}
