tests/core/snapshots/graphql-conformance-http-018.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(hostname: "0.0.0.0", introspection: false, port: 8001, queryValidation: false)
  @upstream(baseURL: "http://upstream/", httpCache: 42) {
  query: Query
}

type Query {
  me: User! @http(path: "/me")
}

type User {
  birthday: Date
  id: String
  name: String
}
