tests/core/snapshots/graphql-conformance-nested-lists-fragment.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Admin {
  name: String!
  region: String!
}

type Query {
  users: [[Role!]!]!
}

union Role = Admin | User

type User {
  accountRef: String!
  id: ID!
  name: String!
}

schema {
  query: Query
}
