tests/core/snapshots/graphql-datasource-query-directives.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Query {
  user: User @graphQL(url: "http://upstream/graphql", name: "user")
}

type User {
  id: Int
  name: String
}
